Correct overflow hidden bug

--- a/synthesis_museum_configuration/css/page.css
+++ b/synthesis_museum_configuration/css/page.css
@@ -176,18 +176,18 @@ html,body{
 
     height: 0px;
     padding-left: 8%;
-
 }
 
 #content{
     background-color: white;
     min-height: 70%;
+	display: flex;
+    flex-wrap: wrap;
 }
 .headerDropDown{
     /*    float:right;
 
         top:12px;
-
         right:16px;*/
 
 
@@ -197,13 +197,7 @@ html,body{
 
     /*    top: 10px;*/
 
-
-
-
 }
-
-
-
 
 #searchDropDown{
     left:-130px;
@@ -289,6 +283,7 @@ html,body{
     padding-right: 0px; 
     padding-left: 0px;
     padding-bottom: 30px;
+    background-color: #F4F4F4;
 }
 
 #leftmenu .nav>li>a{
@@ -559,10 +554,10 @@ html,body{
 
 
 /* top row */
-.col .well{ 
+/*.col .well{ 
     margin-bottom: -99999px;
     padding-bottom: 99999px;  
-}
+}*/
 
 /* bottom row */
 .col-base{ 
@@ -572,14 +567,13 @@ html,body{
 
 
 
-.col-wrap{
+/*.col-wrap{
     overflow: hidden; 
-}
+}*/
 
 
 #leftWell{
     background-image: none;
-    background-color: #F4F4F4;
     padding-left: 0;
     padding-right: 0;
     border: none;
